[gd_scene load_steps=10 format=3 uid="uid://b4argu08l2t5b"]

[ext_resource type="Script" uid="uid://brgr3lddynyr1" path="res://Scripts/UI/Components/ability_icon_timers.gd" id="1_an4no"]
[ext_resource type="Texture2D" uid="uid://bomutwo83repx" path="res://Assets/Icons/icon.svg" id="1_x7buu"]
[ext_resource type="Texture2D" uid="uid://cyxegf1knqb67" path="res://Assets/Miscellaneous/White 2x2.jpg" id="2_an4no"]
[ext_resource type="Script" uid="uid://bm8cf3xlm7wlg" path="res://Scenes/UI/Components/IconButtonResizer.gd" id="4_65bkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65bkr"]
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1jvo"]
bg_color = Color(0, 0, 0, 0.5882353)

[sub_resource type="Theme" id="Theme_65bkr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rk7uf"]
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivwyb"]
bg_color = Color(0, 0, 0, 0.5882353)
corner_detail = 10

[node name="AbilityIconTimers" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an4no")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 188.0
offset_bottom = 32.0
grow_vertical = 2

[node name="AbilityIconButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_65bkr")
theme_override_styles/hover = SubResource("StyleBoxFlat_m1jvo")

[node name="AbilityIcon" type="TextureRect" parent="HBoxContainer/AbilityIconButton"]
clip_children = 2
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x7buu")
expand_mode = 1

[node name="ProgressOverlay" type="TextureProgressBar" parent="HBoxContainer/AbilityIconButton/AbilityIcon"]
self_modulate = Color(0, 0, 0, 0.7647059)
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("2_an4no")

[node name="IconButtonResizer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = SubResource("Theme_65bkr")
script = ExtResource("4_65bkr")

[node name="LabelButton" type="Button" parent="HBoxContainer/IconButtonResizer"]
custom_minimum_size = Vector2(8.97, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_rk7uf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ivwyb")

[node name="InfoLabel" type="Label" parent="HBoxContainer/IconButtonResizer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -11.5
offset_right = 62.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/line_spacing = -10
theme_override_constants/outline_size = 10
text = "text for the icon"
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/AbilityIconButton" to="." method="_on_ability_icon_button_pressed"]
[connection signal="pressed" from="HBoxContainer/IconButtonResizer/LabelButton" to="." method="_on_label_button_pressed"]
